# eavestrough

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  footprint_loader.py  plotter.py
